2020-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: remove certificate key password from hash key of
	credentials since it's unnecessary there and we don't want it to be
	logged when debug is on (for security, passwords shouldn't appear
	in logs).

2020-01-12  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSPredicate.m: Add support for NSDate constants.

2020-01-12  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSKeyValueObserving.m: Implement two missing KVO methods
	on NSArray.

2019-12-15  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/GNUstepBase/GSIMap.h: Use GSI_MAP_NODE_IS_EMPTY macros
	when checking in enumerator.
	* Source/NSConcreteHashTable.m,
	* Source/NSConcreteMapTable.m: Revert part of the weak pointer change.

2019-10-17  Frederik Seiffert <frederik@algoriddim.com>

	* Tests/base/NSHashTable/weakObjects.m:
	* Tests/base/NSMapTable/weakObjects.m:
	Added tests for [NSHashTable weakObjectsHashTable] and
	[NSMapTable strongToWeakObjectsMapTable].

2019-11-26  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRunLoop.m:
	* Tests/base/NSRunLoop/dispatch.m:
	Fix runloop integration for libdispatch from swift-corelibs
	* .travis.yml:
	* travis-deps.yml:
	Fix CI related to libdispatch.

2019-11-15  Frederik Seiffert <frederik@algoriddim.com>

	* configure.ac: check for unwind.h
	* configure: regenerate
	* Source/NSException.m: Added support for backtrace symbolication
	using libunwind, which will be used when backtrace() is unavailable.

2019-11-14  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSXPCConnection.h,
	* Source/NSXPCConnection.m: Fix broken compilation on gcc.

2019-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: updated to latest info

2019-11-05  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSProcessInfo.h:
	* Source/NSPathUtilities.m:
	* Source/NSProcessInfo.m:
	Added support for NSTemporaryDirectory() on Android using subfolder