@@ -1,3 +1,7 @@
+2020-01-20  Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/NSPredicate.m: Allow simple predicates on NSDate.
+
 2020-01-20  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSTLS.m: remove certificate key password from hash key of
